Quick CSS alignment fix

--- a/assembly_endgame/src/index.css
+++ b/assembly_endgame/src/index.css
@@ -13,6 +13,12 @@ body {
   justify-content: center;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 header {
   text-align: center;
 }
@@ -36,6 +42,8 @@ header>p {
   color: #F9F4DA;
   border-radius: 4px;
   margin-block: 30px;
+  width: 100%;
+  max-width: 350px;
 }
 
 .game-status.lost {
